chore: correções e alterações

--- a/index.html
+++ b/index.html
@@ -11,21 +11,21 @@
         <!-- header fixo com os links de navegação -->
         <nav id="container-nav">
             <h1 class="nav-title">
-                <img class="logo-ico" src="/src/img/logo.png" alt="Logo Werberty">
+                <img class="logo-ico" src="src/img/logo.png" alt="Logo Werberty">
                 <span>WERBERTY</span>
             </h1>
             <ul class="nav-links">
-                <li class="active"><a href="#id-tab-sobre">Sobre</a></li>
-                <li><a href="#id-tab-formacao">Formação</a></li>
-                <li><a href="#id-tab-portifolio">Portfólio</a></li>
-                <li><a href="#id-tab-contato">Contato</a></li>
+                <li class="active"><a href="#tab-sobre">Sobre</a></li>
+                <li><a href="#tab-formacao">Formação</a></li>
+                <li><a href="#tab-portifolio">Portfólio</a></li>
+                <li><a href="#tab-contato">Contato</a></li>
             </ul>
         </nav>
     </header>
     <main>
         <section id="container-content">
             <!-- Seção que contem as quatro páginas que mostra sempre a ativa/active -->
-            <div class="tab tab-sobre active" id="id-tab-sobre">
+            <div class="tab tab-sobre active" id="tab-sobre">
                 <div class="body-content body-sobre">
                     <img id="img-perfil" src="src/img/perfil.jpg" alt="Foto de perfil">
                     <div>
@@ -55,7 +55,7 @@
                     </div>
                 </div>
             </div>
-            <div class="tab tab-formacao" id="id-tab-formacao">
+            <div class="tab tab-formacao" id="tab-formacao">
                 <div class="body-content body-formacao">
                     <img id="img-formacao" src="src/img/formacao.png" alt="">
                     <h3>FORMAÇÃO</h3>
@@ -97,9 +97,9 @@
                     </ul>
                 </div>
             </div>
-            <div class="tab tab-portifolio" id="id-tab-portifolio">
+            <div class="tab tab-portifolio" id="tab-portifolio">
                 <div class="body-content body-portifolio">
-                    <h3>PORTIFÓLIO</h3>
+                    <h3>MEU PORTIFÓLIO</h3>
                     <p>
                         Atualmente o foco dos meus estudo é ser desenvolvedor back-end com python. 
                         <ul>
@@ -142,7 +142,7 @@
                     </div>
                 </div>
             </div>
-            <div class="tab tab-contato" id="id-tab-contato">
+            <div class="tab tab-contato" id="tab-contato">
                 <div class="body-content body-contato">
                     <form action="post">
                         <div class="inputs-form">
